--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -9,35 +9,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "firebase": "^10.7.1",
-    "tailwindcss": "^3.4.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.0",
-    "@mui/icons-material": "^5.15.0",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.303.0",
-    "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.3",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-helmet-async": "^2.0.4",
-    "react-hot-toast": "^2.4.1",
-    "date-fns": "^3.0.6",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.6.2",
     "clsx": "^2.1.0",
-    "axios": "^1.6.2"
+    "date-fns": "^3.0.6",
+    "firebase": "^10.7.1",
+    "framer-motion": "^10.16.16",
+    "keen-slider": "^6.8.6",
+    "lucide-react": "^0.303.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.20.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
+    "swiper": "^12.0.3",
+    "tailwindcss": "^3.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.4",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "vite": "^5.0.8",
+    "vite-plugin-pwa": "^0.17.4"
   }
 }
