Add Firebase Hosting GitHub Actions deploy

--- a/portfolio-website/.firebaserc
+++ b/portfolio-website/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "arbabofc-prvt"
-  }
+    "default": "arbabofc-prvt",
+    "prod": "arbabofc-prvt"
+  },
+  "targets": {},
+  "etags": {}
 }
