chore: add yaml devDependency to sync lockfile

--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "vite": "^5.0.8",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "yaml": "^2.8.2"
   }
 }
